# server

./: .gitignore  README.md  go.mod  go.sum
battle-server/: CMakeLists.txt  main.cpp
battle-server/control/: control_handler.cpp  control_handler.hpp  grpc_server.cpp  grpc_server.hpp
battle-server/ecs/: component_pool.hpp  components.hpp  design.md  entity_manager.hpp  time.hpp  world.cpp  world.hpp
battle-server/ecs/component/: component_pool.hpp  components.hpp
battle-server/ecs/entity/: entity.hpp  entity_manager.hpp
battle-server/ecs/system/: input_system.cpp  input_system.hpp  move_system.cpp  move_system.hpp  system_scheduler.cpp  system_scheduler.hpp
battle-server/ecs/tests/: world_test.cpp
battle-server/game/: game_manager.cpp  game_manager.hpp  room.cpp  room.hpp
battle-server/gameplay/: spawn_planner.cpp  spawn_planner.hpp
battle-server/gameplay/tests/: spawn_planner_test.cpp
battle-server/net/: packet_codec.cpp  packet_codec.hpp  udp_endpoint.hpp  udp_server.cpp  udp_server.hpp
battle-server/platform/: config.cpp  config.hpp
battle-server/registry/: node_registrar.cpp  node_registrar.hpp  rcenter_client.cpp  rcenter_client.hpp
battle-server/runtime/: battle_instance.cpp  battle_instance.hpp  battle_runtime.cpp  battle_runtime.hpp
battle-server/runtime/tests/: battle_instance_test.cpp  battle_runtime_test.cpp
battle-server/session/: battle_session.cpp  battle_session.hpp  session_manager.cpp  session_manager.hpp
cmd/game-server/: main.go
cmd/logic-server/: main.go
cmd/rcenter-server/: main.go
cmd/room-server/: main.go
cmd/state-server/: main.go
deploy/nginx/: logic.conf
docs/: api.md  architecture.md
internal/auth/: errors.go  model.go  redis_repository.go  service.go  service_test.go
internal/battle/grpcclient/: grpcclient.go  grpcclient_test.go
internal/config/: config.go
internal/contract/battlepb/: battle.pb.go  battle_grpc.pb.go  session.pb.go
internal/contract/rcenterpb/: rcenter.pb.go  rcenter_grpc.pb.go
internal/contract/rpc/: doc.go
internal/contract/state/: errors.go  model.go
internal/contract/statepb/: state.pb.go  state_grpc.pb.go
internal/httpapi/: handler.go  handler_test.go  health_handler.go  player_handler.go  protocol.go  response.go  room_handler.go  router.go
internal/logic/auth/: model.go  service.go  service_test.go  state_repository.go  state_repository_test.go
internal/logic/friend/: errors.go  model.go  service.go  service_test.go  state_repository.go  state_repository_test.go
internal/logic/httpapi/: auth_handler.go  conn_manager.go  conn_manager_test.go  friend_handler.go  handler.go  handler_test.go  health_handler.go  presence_handler.go  protocol.go  realtime_pusher.go  realtime_subscriber.go  response.go  router.go
internal/logic/match/: rcenter_repository.go  rcenter_repository_test.go  service.go  service_test.go
internal/logic/player/: errors.go  model.go  service.go  state_repository.go  state_repository_test.go
internal/logic/presence/: errors.go  model.go  service.go  service_test.go  state_repository.go  state_repository_test.go
internal/logic/realtime/: event.go  pusher.go  redis_bus.go
internal/platform/config/: config.go
internal/player/: errors.go  model.go  redis_repository.go  service.go
internal/rcenter/: battle_repository.go  battle_repository_test.go  errors.go  model.go  service.go  service_test.go
internal/rcenter/grpcclient/: grpcclient.go  grpcclient_test.go
internal/rcenter/grpcserver/: errors.go  grpcserver.go  grpcserver_test.go
internal/rcenter/rcenterproto/: converter.go
internal/redisdb/: client.go  tx.go
internal/room/: errors.go  model.go  redis_repository.go  service.go  service_test.go
internal/state/grpcclient/: grpcclient.go  grpcclient_test.go
internal/state/grpcserver/: errors.go  grpcserver.go  grpcserver_test.go
internal/state/redisstore/: redisstore.go  redisstore_test.go
internal/state/rpcclient/: client.go  client_test.go
internal/state/rpcserver/: server.go  server_test.go
internal/state/service/: service.go  service_test.go
internal/state/stateproto/: converter.go
proto/battle/v1/: battle.proto  session.proto
proto/rcenter/v1/: rcenter.proto
proto/state/v1/: state.proto
scripts/: generate_proto.sh  reset_redis.sh  run.sh
tools/battle_udp_client/: main.go
tools/create_battle_room/: main.go
tools/end_battle_room/: main.go
tools/ws_client/: main.go
